[project]
name = "eisenhour"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "pydantic[standard]>=2.11.7",
    "uvicorn>=0.35.0",
]

[tool.uv]
package = true

[tool.ruff.lint]
extend-select = ["UP", "I", "N", "RUF", "TRY"]

[tool.mypy]
files = ["src"]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
explicit_package_bases = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pytest.ini_options]
pythonpath = [
       ".",
       "src",
     ]
addopts = "--import-mode=importlib"
python_files = [
    "test_*.py"
]
testpaths = ["tests"]
markers = [
    "unit",
    "integration",
    "e2e"
]

[tool.coverage.run]
relative_files = true

[tool.coverage.paths]
source = [
    "src/",  
    "app/src"
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "mypy>=1.11.1",
]
lint = [
    "mypy>=1.17.0",
]
test = [
    "pytest>=8.4.1",
]
